--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
-    // recyclerview
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    //RxJava2
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
