--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="info.gert.ttrackandroid">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -18,8 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".employer.view.EmployerActivity"></activity>
-        <activity android:name=".employer.view.TasksActivity"></activity>
+        <activity android:name=".employer.activities.view.EmployerActivity"></activity>
+        <activity android:name=".task.TasksActivity"></activity>\\
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCEHxMWvjCGSqAiEXCMDtQqhcRmazb6Y-8" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
