--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".task.TasksActivity"></activity>\\
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCEHxMWvjCGSqAiEXCMDtQqhcRmazb6Y-8" />
+            android:value="apiKey" />
 
         <meta-data
             android:name="com.google.android.gms.version"
